--- a/Resources/Prototypes/Maps/game.yml
+++ b/Resources/Prototypes/Maps/game.yml
@@ -117,23 +117,37 @@
     SecurityOfficer: [ 2, 4 ]
     Janitor: [ 1, 1 ]
 
-#- type: gameMap
-#  id: dart
-#  mapName: 'Dart'
-#  mapNameTemplate: '{0} Dart {1}'
-#  nameGenerator:
-#    !type:NanotrasenNameGenerator
-#    prefixCreator: '14'
-#  mapPath: Maps/dart.yml
-#  minPlayers: 0
-#  votable: false
-#  overflowJobs: []
-#  availableJobs:
-#    Captain: [ 1, 1 ]
-#    ChiefEngineer: [ 1, 1 ]
-#    ChiefMedicalOfficer: [ 1, 1 ]
-#    HeadOfSecurity: [ 1, 1 ]
-#    SecurityOfficer: [ 2, 3 ]
+- type: gameMap
+  id: syndieshuttle
+  mapName: 'SyndieShuttle'
+  mapNameTemplate: '{0} SyndieShuttle {1}'
+  nameGenerator:
+    !type:NanotrasenNameGenerator
+    prefixCreator: '14'
+  mapPath: Maps/syndieshuttle.yml
+  minPlayers: 0
+  votable: false
+  overflowJobs: []
+  availableJobs:
+    Assistant: [ 5, 5 ]
+
+- type: gameMap
+  id: dart
+  mapName: 'Dart'
+  mapNameTemplate: '{0} Dart {1}'
+  nameGenerator:
+    !type:NanotrasenNameGenerator
+    prefixCreator: '14'
+  mapPath: Maps/dart.yml
+  minPlayers: 0
+  votable: false
+  overflowJobs: []
+  availableJobs:
+    Captain: [ 1, 1 ]
+    ChiefEngineer: [ 1, 1 ]
+    ChiefMedicalOfficer: [ 1, 1 ]
+    HeadOfSecurity: [ 1, 1 ]
+    SecurityOfficer: [ 2, 3 ]
 
 - type: gameMap
   id: constructionstation
