--- a/Resources/Prototypes/Maps/game.yml
+++ b/Resources/Prototypes/Maps/game.yml
@@ -131,6 +131,11 @@
     !type:NanotrasenNameGenerator
     prefixCreator: '14'
   mapPath: Maps/dart.yml
+  minPlayers: 0
+  votable: false
+  overflowJobs: []
+  availableJobs:
+    Captain: [ 1, 1 ]
   
 - type: gameMap
   id: sunrise
