--- a/Resources/Prototypes/Entities/Objects/Consumable/drinks.yml
+++ b/Resources/Prototypes/Entities/Objects/Consumable/drinks.yml
@@ -863,16 +863,6 @@
 
 - type: entity
   parent: DrinkGlassBase
-  id: DrinkHell
-  name: hell ramen
-  description: The noodles are boiled, the flavors are artificial, just like being back in school.
-  components:
-  - type: Drink
-  - type: Sprite
-    sprite: Objects/Consumable/Drinks/hell.rsi
-
-- type: entity
-  parent: DrinkGlassBase
   id: DrinkHippiesDelightGlass
   name: hippies' delight glass
   description: A drink enjoyed by people during the 1960's.
@@ -1422,16 +1412,6 @@
   - type: Drink
   - type: Sprite
     sprite: Objects/Consumable/Drinks/pwineglass.rsi
-
-- type: entity
-  parent: DrinkGlassBase
-  id: DrinkRamen
-  name: cup ramen
-  description: Just add 10ml water, self heats! A taste that reminds you of your school years.
-  components:
-  - type: Drink
-  - type: Sprite
-    sprite: Objects/Consumable/Drinks/ramen.rsi
 
 - type: entity
   parent: DrinkGlassBase
@@ -2108,3 +2088,37 @@
   - type: Drink
   - type: Sprite
     sprite: Objects/Consumable/Drinks/shake-white.rsi
+
+- type: entity
+  parent: DrinkGlassBase
+  id: DrinkRamen
+  name: cup ramen
+  description: Just add 10ml water, self heats! A taste that reminds you of your school years
+  components:
+  - type: SolutionContainerManager
+    solutions:
+      drink:
+        maxVol: 50
+        reagents:
+        - ReagentId: DryRamen
+          Quantity: 30
+  - type: Sprite
+    sprite: Objects/Consumable/Drinks/ramen.rsi
+
+- type: entity
+  parent: DrinkGlassBase
+  id: DrinkHellRamen
+  name: hell ramen
+  description: Just add 10ml water, self heats! Super spicy flavor.
+  components:
+  - type: SolutionContainerManager
+    solutions:
+      drink:
+        maxVol: 50
+        reagents:
+        - ReagentId: DryRamen
+          Quantity: 30
+        - ReagentId: CapsaicinOil
+          Quantity: 5
+  - type: Sprite
+    sprite: Objects/Consumable/Drinks/ramen.rsi
