--- a/Resources/Prototypes/Reagents/Consumable/Drink/drinks.yml
+++ b/Resources/Prototypes/Reagents/Consumable/Drink/drinks.yml
@@ -104,6 +104,12 @@
       effects:
       - !type:SatiateThirst
         factor: 4
+        
+- type: reagent
+  id: MilkGoat
+  parent: Milk
+  name: goats milk
+  desc: An opaque white liquid produced by a goat. High buttermilk content.
 
 - type: reagent
   id: MilkOat
@@ -120,16 +126,8 @@
 
 - type: reagent
   id: MilkSoy
+  parent: MilkOat
   name: soy milk
-  group: Drinks
-  desc: Surprisingly tasty.
-  physicalDesc: refreshing
-  color: "#302000"
-  metabolisms:
-    Drink:
-      effects:
-      - !type:SatiateThirst
-        factor: 5 # soyboys stay winning
 
 - type: reagent
   id: MilkSpoiled
