--- a/Resources/Prototypes/Entities/Structures/Machines/lathe.yml
+++ b/Resources/Prototypes/Entities/Structures/Machines/lathe.yml
@@ -195,6 +195,8 @@
       - KitchenReagentGrinderMachineCircuitboard
       - CrewMonitoringComputerCircuitboard
       - ShuttleConsoleCircuitboard
+      - DawInstrumentMachineCircuitboard
+      - SynthesizerInstrument
       - Bucket
       - MopItem
       - SprayBottle
