just a humble commit farmer

--- a/Resources/Prototypes/Maps/game.yml
+++ b/Resources/Prototypes/Maps/game.yml
@@ -102,7 +102,7 @@
   nameGenerator:
     !type:NanotrasenNameGenerator
     prefixCreator: '14'
-  mapPath: Maps/nss_pillar.yml
+  mapPath: /Maps/nss_pillar.yml
   minPlayers: 20
   overflowJobs:
     - Assistant
