Increases power usage across the station (#6260)

--- a/Resources/Prototypes/Entities/Structures/Machines/Computers/computers.yml
+++ b/Resources/Prototypes/Entities/Structures/Machines/Computers/computers.yml
@@ -141,7 +141,7 @@
     - key: enum.ResearchClientUiKey.Key
       type: ResearchClientBoundUserInterface
   - type: ApcPowerReceiver
-    powerLoad: 200
+    powerLoad: 1000
     priority: Low
   - type: ExtensionCableReceiver
   - type: Computer
@@ -267,6 +267,9 @@
       type: SolarControlConsoleBoundUserInterface
   - type: Computer
     board: SolarControlComputerCircuitboard
+  - type: ApcPowerReceiver
+    powerLoad: 200
+    priority: Low
   - type: PointLight
     radius: 1.5
     energy: 1.6
