--- a/Resources/Prototypes/Entities/Structures/Machines/cloning_machine.yml
+++ b/Resources/Prototypes/Entities/Structures/Machines/cloning_machine.yml
@@ -42,6 +42,9 @@
   - type: Wires
     BoardName: "CloningPod"
     LayoutId: CloningPod
+  - type: ApcPowerReceiver
+    powerLoad: 2500
+    priority: Low
   - type: Appearance
     visuals:
       - type: GenericEnumVisualizer
