--- a/Resources/Prototypes/Entities/Structures/Machines/Computers/base_structurecomputers.yml
+++ b/Resources/Prototypes/Entities/Structures/Machines/Computers/base_structurecomputers.yml
@@ -11,6 +11,7 @@
     node: computer
   - type: Computer
   - type: ApcPowerReceiver
+    powerLoad: 500
   - type: ExtensionCableReceiver
   - type: Sprite
     sprite: Structures/Machines/computers.rsi
