Fixes digital audio workstation spelling (#6461)
* Fixes daw spelling.

* Revert "Fixes daw spelling."

This reverts commit 24ad3305f2b6d98fdb4faeee5a33dcd8b951877c.

* Fixes daw spelling.

--- a/Resources/Prototypes/Entities/Structures/Furniture/instruments.yml
+++ b/Resources/Prototypes/Entities/Structures/Furniture/instruments.yml
@@ -74,7 +74,7 @@
 - type: entity
   parent: BasePlaceableInstrument
   id: DawInstrument
-  name: digital audio workstaiton
+  name: digital audio workstation
   description: Cutting edge music technology, straight from the 90s.
   components:
   - type: Sprite
