--- a/Resources/Changelog/Changelog.yml
+++ b/Resources/Changelog/Changelog.yml
@@ -2934,7 +2934,7 @@ Entries:
   time: '2022-02-04T23:17:11.0000000+00:00'
 - author: Lamrr
   changes:
-  - {message: 'The digital audio workstaiton [sic] has been relabelled.', type: Fix}
+  - {message: 'The digital audio workstaiton (sic) has been relabelled.', type: Fix}
   id: 981
   time: '2022-02-05T01:23:43.0000000+00:00'
 - author: Willhelm53
