--- a/Resources/Prototypes/Catalog/Fills/Lockers/heads.yml
+++ b/Resources/Prototypes/Catalog/Fills/Lockers/heads.yml
@@ -25,6 +25,7 @@
         prob: 1
       - id: CigPackGreen
         prob: 0.50
+      - id: DoorRemoteCargo
 
 - type: entity
   id: LockerCaptainFilled
@@ -63,6 +64,7 @@
       - id: CigarGoldCase
         prob: 0.25
       - id: ClothingBeltSheathFilled
+      - id: DoorRemoteCommand
 
 - type: entity
   id: LockerHeadOfPersonnelFilled
@@ -94,6 +96,7 @@
       - id: CigarGoldCase
         prob: 0.10
         # Fuck the HoP they don't deserve fucking cigars.
+      - id: DoorRemoteService
 
 - type: entity
   id: LockerChiefEngineerFilled
@@ -114,6 +117,7 @@
       - id: ClothingHandsGlovesColorYellow
       - id: CigarCase
         prob: 0.15
+      - id: DoorRemoteEngineering
 
 - type: entity
   id: LockerChiefMedicalOfficerFilled
@@ -135,6 +139,7 @@
       - id: ClothingOuterHardsuitMedical
       - id: Hypospray
       - id: HandheldCrewMonitor
+      - id: DoorRemoteMedical
 
 - type: entity
   id: LockerResearchDirectorFilled
@@ -157,6 +162,7 @@
         prob: 1
       - id: PlushieSlime
         prob: 0.1
+      - id: DoorRemoteResearch
 
 - type: entity
   id: LockerHeadOfSecurityFilled
@@ -205,3 +211,4 @@
         prob: 1
       - id: CigarGoldCase
         prob: 0.50
+      - id: DoorRemoteSecurity
