--- a/Resources/Prototypes/Entities/Structures/Doors/Airlocks/base_structureairlocks.yml
+++ b/Resources/Prototypes/Entities/Structures/Doors/Airlocks/base_structureairlocks.yml
@@ -29,7 +29,7 @@
           bounds: "-0.49,-0.49,0.49,0.49" # don't want this colliding with walls or they won't close
       mass: 100
       mask:
-      - MobImpassable
+      - Impassable
       layer:
       - Opaque
       - Impassable
