Revert "Add support for multi-layer in-hand and clothing sprites" (#6521)

--- a/Resources/Prototypes/Entities/Mobs/NPCs/animals.yml
+++ b/Resources/Prototypes/Entities/Mobs/NPCs/animals.yml
@@ -502,6 +502,7 @@
       normal: monkey
       crit: dead
       dead: dead
+    - type: HandsVisualizer
     - type: FireVisualizer
       sprite: Mobs/Effects/onfire.rsi
       normalState: Monkey_burning
