Revert "epic Respiration Rework" (#6524)

--- a/Resources/Prototypes/Entities/Mobs/Species/vox.yml
+++ b/Resources/Prototypes/Entities/Mobs/Species/vox.yml
@@ -83,14 +83,18 @@
   - type: Body
     template: HumanoidTemplate
     preset: VoxPreset
-  # TODO Vox nitrogen
   - type: Respirator
+    needsGases:
+      Nitrogen: 0.00060763888
+    producesGases:
+      Nitrogen: 0.00045572916
+      CarbonDioxide: 0.00015190972
     damage:
       types:
-        Asphyxiation: 3
+        Asphyxiation: 1
     damageRecovery:
       types:
-        Asphyxiation: -1.5
+        Asphyxiation: -1
 #  - type: Appearance
 #    visuals:
 #      - type: RotationVisualizer
