--- a/Resources/Prototypes/Body/Mechanisms/slime.yml
+++ b/Resources/Prototypes/Body/Mechanisms/slime.yml
@@ -11,6 +11,7 @@
     - type: Mechanism
       size: 5
       compatibility: Slime
+    - type: Lung
     - type: Brain
     - type: Stomach
       maxVolume: 250
