--- a/Resources/Prototypes/Entities/Mobs/NPCs/simplemob.yml
+++ b/Resources/Prototypes/Entities/Mobs/NPCs/simplemob.yml
@@ -152,12 +152,17 @@
     normalBodyTemperature: 310.15
     thermalRegulationTemperatureThreshold: 25
   - type: Respirator
+    needsGases:
+      Oxygen: 0.00060763888
+    producesGases:
+      Oxygen: 0.00045572916
+      CarbonDioxide: 0.00015190972
     damage:
       types:
-        Asphyxiation: 3
+        Asphyxiation: 1
     damageRecovery:
       types:
-        Asphyxiation: -1.5
+        Asphyxiation: -1
   - type: Temperature
     heatDamageThreshold: 360
     coldDamageThreshold: 260
