Fix gas mixer visuals (#6534)

--- a/Resources/Prototypes/Entities/Structures/Piping/Atmospherics/trinary.yml
+++ b/Resources/Prototypes/Entities/Structures/Piping/Atmospherics/trinary.yml
@@ -116,12 +116,15 @@
           rotation: -90
           map: [ "enum.PipeColorVisualizer+Layers.Pipe" ]
         - state: gasMixer
-          map: [ "enum.SubFloorShowLayerVisualizer+Layers.FirstLayer" ]
+          map: [ "enum.SubFloorShowLayerVisualizer+Layers.FirstLayer", "enum.GasFilterVisualizer+Layers.Enabled" ]
     - type: Appearance
       visuals:
         - type: SubFloorShowLayerVisualizer
         - type: PipeConnectorVisualizer
         - type: PipeColorVisualizer
+        - type: GasFilterVisualizer
+          disabledState: gasMixer
+          enabledState: gasMixerOn
     - type: UserInterface
       interfaces:
         - key: enum.GasMixerUiKey.Key
@@ -150,6 +153,14 @@
       map: [ "enum.PipeColorVisualizer+Layers.Pipe" ]
     - state: gasMixerF
       map: [ "enum.SubFloorShowLayerVisualizer+Layers.FirstLayer", "enum.GasFilterVisualizer+Layers.Enabled" ]
+  - type: Appearance
+    visuals:
+    - type: SubFloorShowLayerVisualizer
+    - type: PipeConnectorVisualizer
+    - type: PipeColorVisualizer
+    - type: GasFilterVisualizer
+      disabledState: gasMixerF
+      enabledState: gasMixerFOn
   - type: Flippable
     mirrorEntity: GasMixer
   - type: NodeContainer
