Adds quartermaster spawnpoint (without changing maps) (#6503)
Co-authored-by: metalgearsloth <comedian_vs_clown@hotmail.com>

--- a/Resources/Prototypes/Entities/Markers/Spawners/jobs.yml
+++ b/Resources/Prototypes/Entities/Markers/Spawners/jobs.yml
@@ -36,15 +36,18 @@
 
 # Cargo
 
-#- type: entity
-#  id: SpawnPointQuartermaster
-#  parent: SpawnPointJobBase
-#  name: quartermaster
-#  components:
-#    - type: SpawnPoint
-#      job_id: Quartermaster
-#    - type: Sprite
-#      state: Quartermaster
+- type: entity
+  id: SpawnPointQuartermaster
+  parent: SpawnPointJobBase
+  name: quartermaster
+  components:
+  - type: SpawnPoint
+    job_id: Quartermaster
+  - type: Sprite
+    layers:
+      - state: green
+      - state: qm
+
 
 - type: entity
   id: SpawnPointCargoTechnician
