Added Fly Amanita and Galaxythistle (#6538)

--- a/Resources/Prototypes/Catalog/VendingMachines/Inventories/seeds.yml
+++ b/Resources/Prototypes/Catalog/VendingMachines/Inventories/seeds.yml
@@ -13,6 +13,7 @@
     ChiliSeeds: 10
     CornSeeds: 10
     EggplantSeeds: 10
+    GalaxythistleSeeds: 10
     LemonSeeds: 10
     LingzhiSeeds: 10
     PoppySeeds: 10
