--- a/Resources/Prototypes/Roles/Jobs/Cargo/salvage_specialist.yml
+++ b/Resources/Prototypes/Roles/Jobs/Cargo/salvage_specialist.yml
@@ -1,6 +1,6 @@
 - type: job
   id: SalvageSpecialist
-  name: "salvage spationaut"
+  name: "salvage specialist"
   icon: "ShaftMiner"
   startingGear: SalvageSpecialistGear
   departments:
