--- a/Resources/Prototypes/Recipes/Construction/structures.yml
+++ b/Resources/Prototypes/Recipes/Construction/structures.yml
@@ -450,6 +450,24 @@
   conditions:
   # Same here. - 20kdc
     - !type:TileNotBlocked
+    
+- type: construction
+  name: ground light post
+  id: LightGroundFixture
+  graph: LightFixture
+  startNode: start
+  targetNode: groundLight
+  category: Structures
+  description: A ground light fixture. Use light bulbs.
+  icon:
+    sprite: Structures/Decoration/LightPosts/small_light_post.rsi
+    state: off
+  objectType: Structure
+  placementMode: SnapgridCenter
+  canRotate: false
+  canBuildInImpassable: false
+  conditions:
+    - !type:TileNotBlocked
 
 - type: construction
   name: light switch
